Diseño y maquetacion vehiculos landing

--- a/tusegundazo/src/app/app.component.html
+++ b/tusegundazo/src/app/app.component.html
@@ -1,3 +1,21 @@
-<h1>Hola mundo</h1>
-<app-vehiculo></app-vehiculo>
+<div class="container text-start">
+    <div class="header-container">
+      <nav class="navbar navbar-light">
+        <span class="navbar-brand mb-0 h1 font-weight-bold">TuSegundazo.com</span>
+      </nav>
+    </div>
+    <div class="header-container">
+        <div class="d-flex align-items-center">
+            <img src="tusegundazo.jpg" alt="Car Image" class="img-fluid w-100"/>
+        </div>
+    </div>    
+    <app-vehiculo></app-vehiculo>
+  </div>
 
+  <div class="footer py-3 mt-4">
+    <div class="container text-center">
+      <p class="mb-0">
+        Contact us: +57 3102105253 - info&#64;tusegundazo.com - &#64;tusegundazo
+      </p>
+    </div>
+  </div>
