--- a/tusegundazo/src/app/vehiculo/vehiculo.component.html
+++ b/tusegundazo/src/app/vehiculo/vehiculo.component.html
@@ -1,17 +1,28 @@
-<p>
-  vehiculo works!
-</p>
+<div class="table-responsive col-8">
+  <table class="table">
+    <thead class="table-dark">
+      <tr>
+        <th>#</th>
+        <th>Marca</th>
+        <th>Línea</th>
+        <th>Modelo</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr *ngFor="let v of vehiculos; let i = index">
+        <td>{{ i + 1 }}</td>
+        <td>{{ v.marca }}</td>
+        <td>{{ v.linea }}</td>
+        <td>{{ v.modelo }}</td>
+      </tr>
+    </tbody>
+  </table>
+</div>
 
-<tbody>
-  <tr *ngFor="let v of vehiculos">
-    <td>
-      <dd>{{v.marca}}</dd>
-    </td>
-    <td>
-      <dd>{{v.id}}</dd>
-    </td>
-    <td>
-      <dd>{{v.imagen}}</dd>
-    </td>
-</tr>
-</tbody>
+<div *ngIf="vehiculosAgrupados.length">
+  <ul class="list-unstyled">
+    <li *ngFor="let vehiculo of vehiculosAgrupados" >
+      Total {{ vehiculo.marca }}: {{ vehiculo.cantidad }}
+    </li>
+  </ul>
+</div>
