Creacion de pruebas de componente vehiculo

--- a/tusegundazo/src/app/app.component.html
+++ b/tusegundazo/src/app/app.component.html
@@ -6,16 +6,16 @@
     </div>
     <div class="header-container">
         <div class="d-flex align-items-center">
-            <img src="tusegundazo.jpg" alt="Car Image" class="img-fluid w-100"/>
+            <img src="tusegundazo.jpg" alt="tusegundazo" class="img-fluid w-100"/>
         </div>
     </div>    
     <app-vehiculo></app-vehiculo>
-  </div>
+    <div class="footer py-3 mt-4">
+        <div class="container text-center">
+          <p class="mb-0">
+            Contact us: +57 3102105253 - info&#64;tusegundazo.com - &#64;tusegundazo
+          </p>
+        </div>
+      </div>
+</div>
 
-  <div class="footer py-3 mt-4">
-    <div class="container text-center">
-      <p class="mb-0">
-        Contact us: +57 3102105253 - info&#64;tusegundazo.com - &#64;tusegundazo
-      </p>
-    </div>
-  </div>
